<resources>
    <string name="app_name">Rolling Meadows</string>
    <string name="alert">Alert</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="_full_name">First Name</string>
    <string name="_phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Signup</string>
    <string name="create">Create</string>
    <string name="agree_terms_privacy_policy">By continuing I agree to Terms &amp; Conditions of the platform.</string>
    <string name="already_have_an_account_sign_in">Already have an account? Log In</string>
    <string name="dont_have_an_account_register">Don\'t have an account? Create New</string>
    <string name="_forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="login">Login</string>
    <string name="loading_please_wait">Loading… Please wait</string>
    <string name="submit">Submit</string>
    <string name="all_right_reserved">All Rights Reserved</string>
    <string name="create_account">Create Account</string>
    <string name="contact_us">Contact Us</string>
    <string name="continue_">Continue</string>
    <string name="about_us">About Us</string>
    <string name="email">Email</string>
    <string name="my_ride">My Rides</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_a_conditions">Terms &amp; Conditions</string>
    <string name="change_password">Change Password</string>
    <string name="gps_not_enabled">Gps not enabled</string>
    <string name="location_permission_not_specified">Location Permission not specified</string>
    <string name="your_gps_seems_to_be_disable">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="GOOGLE_WEB_KEY">AIzaSyBqymuy2c8Tk3Nrtkgy1ZTHNzFpo5KEEqo</string>
    <string name="press_one_more_time">"Press one more time to push app into background"</string>
    <string name="welcome_text_register">Welcome! Enter details below to create your new account.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_text">Enter the email address that link with your account.</string>
    <string name="reset_password">Reset Password</string>
    <string name="_otp_verification">OTP verification</string>
    <string name="resend_password_text">Create your new password.</string>
    <string name="new_password">New Password</string>
    <string name="reset">Reset</string>
    <string name="account_verification">Account Verification</string>
    <string name="registration_otp_verification_text">Please enter the verification code we just sent you to on your</string>
    <string name="phone_num">phone number.</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="otp_forgot_password_text">Enter the four-digit code we sent you via email to continue.</string>
    <string name="to_reset_your_password">to reset your password.</string>
    <string name="account_verified">Account Verified</string>
    <string name="hey_">Hey!</string>
    <string name="hey_account_verifed_text">account has been \nsuccessfully verified.</string>
    <string name="login_text">Welcome! Enter details below to login.</string>
    <string name="dont_have_account_resend_otp">Don\'t receive an OTP? Resend</string>
    <string name="send">Send</string>
    <string name="name">Name</string>
    <string name="your_message">Your Message…</string>
    <string name="select_category_for_message">Select Category of Your Message</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="payment_method">Payment Method</string>
    <string name="request_now">Request Now</string>
    <string name="search_ride">Search Ride</string>
    <string name="where_you_want_to_go">Where you want to go?</string>
    <string name="pickup">Pickup</string>
    <string name="destination">Destination</string>
    <string name="static_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="network_error">Network error, could get data,please try again!</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="invalid_email_and_password">Please check your email and password</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="search_error">There is no such request</string>
    <string name="search_pickup_location">Search pickup location</string>
    <string name="recent_history">Recent History</string>
    <string name="select_from_map">Select from Map</string>
    <string name="choose_ride">Choose a Ride</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="bike_amount">Amount to be paid -</string>
    <string name="car_amount">Amount to be paid - $150/-</string>
    <string name="xl_car_amount">Amount to be paid - $250/-</string>
    <string name="car">Car</string>
    <string name="xl_car">XL Car</string>
    <string name="done">Done</string>
    <string name="select_location">select_location</string>
    <string name="not_able_to_get_latlong">Not able to get location</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="choose_your_debit_credit_card">Choose your Debit/Credit card to pay for your ride.</string>
    <string name="card_holder_first_name">Card Holder\'s Name</string>
    <string name="card_holder_last_name">Card Holder\'s Last Name</string>
    <string name="card_number">Card Number</string>
    <string name="add">Add</string>
    <string name="card_text">We accept credit &amp; debit cards from Visa, Mastercard and American Express.</string>
    <string name="add_card">Add Card</string>
    <string name="payment_done">Payment Done</string>
    <string name="payment_done_txt">Hey! Your payment has been successfully done for your ride. </string>
    <string name="okay">okay</string>
    <string name="add_fav">Mark Favorite</string>
    <string name="rate_your_ride">Rate Your Ride</string>
    <string name="give_rating">Give Rating</string>
    <string name="give_review">Give Your Reviews</string>
    <string name="write">Write</string>
    <string name="write_">Write…</string>
    <string name="rate">Rate</string>
    <string name="skip">Skip</string>
    <string name="ride_information">Ride Information</string>
    <string name="ride_near_you">Ride Near You</string>
    <string name="my_rides">My Rides</string>
    <string name="my_fav_driver">My Favorite Drivers</string>
    <string name="no_data_found">No data found</string>
    <string name="no_booking_request_found">No booking request found</string>
    <string name="no_fav_driver_request_found">No Favorite Driver found</string>
    <string name="in_progress">In-Progress</string>
    <string name="completed">Completed</string>
    <string name="assigned">Assigned</string>
    <string name="ride_title">In-Progress Ride</string>
    <string name="pending">Pending Ride</string>
    <string name="cancelled_ride">Cancelled Ride</string>
    <string name="pending_ride">Pending Ride</string>
    <string name="rejected_ride">Rejected Ride</string>
    <string name="location">Location</string>
    <string name="scheduled">Scheduled</string>
    <string name="amount_to_be_paid">Amount to be paid</string>
    <string name="driver_detail">Driver Details</string>
    <string name="total_rides">Total Rides</string>
    <string name="location_not_specified">Location not found</string>
    <string name="email_address">Email Address</string>
    <string name="last_name">Last Name</string>
    <string name="save_changes">Save Changes</string>
    <string name="completed_ride">Completed Ride</string>
    <string name="expire_on">Expires On</string>
    <string name="cvv">CVV</string>
    <string name="reached">Reached</string>
    <string name="verify">Verify</string>
    <string name="pay_now">Pay Now</string>
    <string name="you_are_reached_at_your_ride_destination">You are reached at your destination.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="plz_select_profile_picture">Please select profile picture</string>
    <string name="plz_select_phone_code">Please select phone code</string>
    <string name="plz_enter_email_address">Please enter email address</string>
    <string name="plz_enter_valid_email_address">Please enter valid email address</string>
    <string name="plz_enter_full_name">Please enter first name</string>
    <string name="plz_enter_name">Please enter full name</string>
    <string name="plz_enter_message">Please enter the message</string>
    <string name="plz_enter_last_name">Please enter last name</string>
    <string name="plz_enter_phone_number">Please enter phone number</string>
    <string name="plz_enter_valid_phone_num">Please enter valid phone number and should be of 8 to 15 digits</string>
    <string name="plz_enter_password">Please enter password</string>
    <string name="plz_enter_new_password">Please enter new password</string>
    <string name="plz_enter_valid_password">Please enter valid password</string>
    <string name="plz_enter_confirm_password">Please enter confirm password</string>
    <string name="new_password_doesnot_matched_with_old_password">New password and confirm password should be same.</string>
    <string name="password_doesnot_matched_with_old_password">Password and confirm password should be same.</string>
    <string name="plz_enter_address">Please enter the address</string>
    <string name="validPass">Password should be minimum of 8 characters </string>
    <string name="select_date">Select Date</string>
    <string name="plz_enter_otp">Please enter OTP</string>
    <string name="logout">Logout</string>
    <string name="sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="swahili">Swahili</string>
    <string name="fav_description">Hey! Mark this driver as favorite, so that for next ride it will check your marked driver availability first.</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your Passwod</string>
</resources>