<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.rolling.meadows.views.authentication.splash.SplashFragment"
        android:label="SplashFragment"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_introFragment_to_loginFragment"
            app:destination="@id/loginFragment" />

    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.rolling.meadows.views.authentication.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_forgotPasswordFragment"
            app:destination="@id/forgotPasswordFragment" />
        <action
            android:id="@+id/action_send_otp"
            app:destination="@id/fragment_otp_verification" />

    </fragment>
    <fragment
        android:id="@+id/forgotPasswordFragment"
        android:name="com.rolling.meadows.views.authentication.forgot_password.ForgotPasswordFragment"
        android:label="@string/_forgot_password"
        tools:layout="@layout/fragment_forgot_password">
        <action
            android:id="@+id/action_send_otp"
            app:destination="@id/fragment_otp_verification" />

    </fragment>
    <fragment
        android:id="@+id/fragment_otp_verification"
        android:name="com.rolling.meadows.views.authentication.OtpVerificationFragment"
        android:label="@string/_otp_verification"
        tools:layout="@layout/fragment_otp_verification">
        <action
            android:id="@+id/action_reset_otp"
            app:destination="@id/fragment_reset_otp" />
        <action
            android:id="@+id/action_introFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/fragment_reset_otp"
        android:name="com.rolling.meadows.views.authentication.forgot_password.ResetPasswordFragment"
        android:label="@string/_otp_verification"
        tools:layout="@layout/fragment_otp_verification">
        <action
            android:id="@+id/action_login"
            app:destination="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/staticPagesFragment"
        android:name="com.rolling.meadows.views.view_main.dynamicPages.StaticPagesFragment"
        tools:layout="@layout/fragment_dynamic_page" />

</navigation>