<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.rolling.meadows.view_model.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_screen_background">

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/viewCL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_15sdp"
                android:paddingBottom="@dimen/_70sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/loginTitleTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="Login"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_23sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/loginTitleTV">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/emailTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/email"
                        android:textColor="@color/_8F8F8F"
                        android:textSize="@dimen/_11ssp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edtEmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/shape_rectangle_circular_corner_border_grey"
                        android:drawableStart="@drawable/ic_email"
                        android:drawablePadding="@dimen/_5sdp"
                        android:hint="@string/enter_your_email"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/_12ssp"
                        android:textColor="@color/_303030"
                        android:textSize="@dimen/_14sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/emailTV" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/passwordTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/password"
                        android:textColor="@color/_8F8F8F"
                        android:textSize="@dimen/_11ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

                    <LinearLayout
                        android:id="@+id/passwordLL"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/shape_rectangle_circular_corner_border_grey"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="@dimen/_6sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/passwordTV">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/edtPasswd"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@null"
                            android:drawableStart="@drawable/ic_passwd"
                            android:drawablePadding="@dimen/_5sdp"
                            android:hint="@string/enter_your_password"
                            android:inputType="textPassword"
                            android:padding="@dimen/_4sdp"
                            android:textColor="@color/_303030"
                            android:textSize="14sp" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/imageViewPasswordToggle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:src="@drawable/ic_eye" />
                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtForgotPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/forgot_password"
                        android:textColor="@color/_B2D05A"
                        android:textSize="@dimen/_11ssp"

                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/passwordLL"  />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_40sdp"
                        android:background="@drawable/button_background"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/login"
                        android:onClick="@{listener::onClick}"
                        android:paddingBottom="@dimen/_5sdp"
                        android:textAllCaps="false"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/passwordLL"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13ssp" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>