<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/logoutCL"
    android:background="#80000000">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_10sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/titleTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:text="@string/sure_you_want_to_logout"
                android:textColor="@color/_1D1A2F"
                android:textSize="@dimen/_17ssp"
                app:fontFamily="@font/lato_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/cancelBT"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@drawable/background_boundary_round"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/_1D1A2F"
                android:textSize="@dimen/_13sdp"
                app:fontFamily="@font/lato_bold"
                app:layout_constraintBottom_toBottomOf="@+id/logoutBT"
                app:layout_constraintEnd_toStartOf="@id/logoutBT"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/logoutBT" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/logoutBT"
                android:layout_width="@dimen/_110sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_marginStart="@dimen/_1sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/button_small_"
                android:gravity="center"
                android:paddingBottom="@dimen/_10sdp"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                app:fontFamily="@font/lato_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cancelBT"
                app:layout_constraintTop_toBottomOf="@+id/titleTV" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>



