<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewReport"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        app:cardCornerRadius="@dimen/_6sdp"
        app:cardElevation="@dimen/_4sdp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_2sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/englistTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_delete"
                android:drawablePadding="@dimen/_8sdp"
                android:fontFamily="@font/poppins_regular"
                android:paddingHorizontal="@dimen/_6sdp"
                android:paddingVertical="@dimen/_6sdp"
                android:text="@string/english"
                android:textColor="@color/_787F84"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                app:layout_constraintTop_toBottomOf="@+id/englistTV" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/frenchTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_delete"
                android:drawablePadding="@dimen/_8sdp"
                android:fontFamily="@font/poppins_regular"
                android:paddingHorizontal="@dimen/_6sdp"
                android:paddingVertical="@dimen/_6sdp"
                android:text="@string/french"
                android:textColor="@color/_787F84"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view1" />
            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                app:layout_constraintTop_toBottomOf="@+id/frenchTV" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/swahiliiTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_delete"
                android:drawablePadding="@dimen/_8sdp"
                android:fontFamily="@font/poppins_regular"
                android:paddingHorizontal="@dimen/_6sdp"
                android:paddingVertical="@dimen/_6sdp"
                android:text="@string/swahili"
                android:textColor="@color/_787F84"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>