<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_30sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_14sdp"
        app:cardElevation="@dimen/_4sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/favTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/add_fav"
                android:textColor="@color/_1D1A2F"
                android:textSize="@dimen/_18ssp"
                app:fontFamily="@font/lato_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/descriptionTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/fav_description"
                android:textColor="@color/_787F84"
                android:textSize="@dimen/_10ssp"
                app:fontFamily="@font/lato_regular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/favTV" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/favLL"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_70sdp"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/button"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionTV">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/addFavBT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:drawablePadding="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_19sdp"
                    android:text="@string/add_fav"
                    android:drawableStart="@drawable/ic_like_fav"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp"
                    app:fontFamily="@font/lato_bold"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/skipBT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/skip"
                android:textColor="@color/_787F84"
                android:textSize="@dimen/_10sdp"
                app:fontFamily="@font/lato_regular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/favLL" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>



